--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,24 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 }
+
+#card-outer:hover #card-inner {
+    transform: rotateY(180deg);
+}
+
+#back {
+    transform: rotateY(180deg);
+}
+
+#front, #back {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+    
+}
+
+img {
+    height: 100%;
+    width: 100%;
+}
