--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,22 @@ body {
     width: 900px;
   }
 
+  .card {
+    all: unset;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  
+  }
+  
+  .card-img {
+      border-radius: 10px 10px 10px 10px;
+       width: 100%;
+       object-fit: cover;
+       height: 20em;
+       padding-bottom: 3%;
+  }
+
 #card-outer {
     height:400px;
     width: 400px;
